[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "ppieces"
version = "0.4.1"
description = "A command-line utility to streamline the setup of new Python projects."
authors = [{name = "Patilla Code", email = "patillacode@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bamp==1.2.0",
    "build==1.0.3",
    "click==7.1.2",
    "icecream==2.1.3",
    "pyfiglet==0.8.post1",
    "rich==13.4.1",
    "termcolor==2.2.0",
]

[project.urls]
homepage = "https://github.com/patillacode/ppieces"
repository = "https://github.com/patillacode/ppieces"

[project.scripts]
ppieces = "ppieces.main:main"
